--- a/src/App.css
+++ b/src/App.css
@@ -531,12 +531,13 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Footer Css ************/
 .footer {
-  padding: 50px 0 0 0;
+  padding: 40px 0 0 0;
   background-image: url('./assets/img/footer-bg.png');
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
+  background-color: rgb(216, 96, 96);
 }
 
 .footer img {
@@ -548,11 +549,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   color: #B8B8B8;
   letter-spacing: 0.5px;
   margin-top: 15px;
-}
-.footer-content{
-  position: absolute;
-  top: 0;
-  margin: 1.5rem 0 0 0;
 }
 
 .social-icon-footer{
